[package]
name = "cluster-lib"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = { version = "0.3", features = ["real_blackbox"] }

# [[bench]]
# name = "my_benchmark"
# harness = false

[dependencies]
partitions = "0.2"
