[package]
name = "cluster-lib"
version = "0.1.0"
edition = "2018"

[lib]
bench = false

[features]
incremental = []
perfect-upper = []
branch-comp = []
alt-cost = []

[dev-dependencies]
criterion = { version="0.3", features=["html_reports"] }
pretty_assertions = "0.7.2"

[[bench]]
name = "public_instances"
harness = false

[dependencies]
rand = "*"

[profile.bench]
lto = true
codegen-units = 1

[profile.release]
lto = true
codegen-units = 1
