[package]
name = "submission"
version = "0.1.0"
authors = ["Hytak <lhc.holten@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cluster-lib = { path = "../cluster-lib", features = ["incremental"] }

[profile.release]
lto = true
codegen-units = 1
